# AI-Coder-DeCoder

./: .gitignore  CONVENTIONS.md  IMPLEMENTATION_NOTES.md  LICENSE  README.md  TODO  TODO.md  ac-dc.json  index.html  llm.json  newfile.py  package-lock.json  package.json  prompt-snippets.json  pyproject.toml  setup.py  sys_prompt.md  sys_prompt_extra.md  sys_prompt_v2.md  sys_prompt_v3.md  sys_prompt_v3.md.bak  versions.json  vite.config.js
.ac-dc4/doc_cache/: IMPLEMENTATION_NOTES.md.json  README.md.json  specs3__1-foundation__communication_layer.md.json  specs3__1-foundation__configuration.md.json  specs3__1-foundation__jrpc-oo.md.json  specs3__1-foundation__repository_operations.md.json  specs3__2-code-analysis__document_mode.md.json  specs3__2-code-analysis__symbol_index.md.json  specs3__3-llm-engine__cache_tiering.md.json  specs3__3-llm-engine__context_and_history.md.json  specs3__3-llm-engine__edit_protocol.md.json  specs3__3-llm-engine__prompt_assembly.md.json  specs3__3-llm-engine__streaming_lifecycle.md.json  specs3__4-features__code_review.md.json  specs3__4-features__collaboration.md.json  specs3__4-features__doc_convert.md.json  specs3__4-features__image_persistence.md.json  specs3__4-features__url_handling.md.json  specs3__5-webapp__app_shell_and_dialog.md.json  specs3__5-webapp__chat_interface.md.json  specs3__5-webapp__diff_viewer.md.json  specs3__5-webapp__file_navigation.md.json  specs3__5-webapp__file_picker.md.json  (+64 more)
30fb5fca/: index.html
36f52094/: index.html
3889f038/: index.html
453dec37/: index.html
49be88c1/: index.html
5099c043/: index.html
53c61143/: index.html
582ec8cc/: index.html
5ee4a77d/: index.html
66b1a39c/: index.html
6f57d985/: index.html
771788c4/: index.html
8d40b94e/: index.html
8dcf0065/: index.html
9ebb5932/: index.html
a7efe9c7/: index.html
a91101df/: index.html
ac/: LiteLLM.py  Repo.py  ac-dc.json  aider_prompt_and_search_replace.py  config.py  dc.py  edit_parser.py  indexer.py  llm.json  port_utils.py  settings.py  test_cache_tiers.py  version.py  webapp_server.py
aca47054/: index.html
aed0ff71/: index.html
be2d999b/: index.html
c8eac185/: index.html
cee71baa/: index.html
cf1b1838/: index.html
config/: app.json  litellm.json  llm.json  prompt-snippets.json
d023ee1c/: index.html
d409b502/: index.html
d8fc861d/: index.html
da9a6136/: index.html
docs/: agent-spawning-plan.md  agent-tab-strip-plan.md  parallel-agents-scope-refactor.md
e4edab94/: index.html
e7352430/: index.html
f1a023ef/: index.html
f3750827/: index.html
f585f962/: index.html
f60b853e/: index.html
plan/: symbol_index_implementation.md
plans/: PLAN_cache_history_ui.md  PLAN_cache_optimization.md  PLAN_cache_spec_alignment.md  PLAN_cache_threshold_management.md  PLAN_config_directory_reorganization.md  PLAN_cross_file_call_graph.md  PLAN_file_cache_tiers.md  PLAN_llm_config_settings.md  PLAN_message_scrolling.md  PLAN_prompt_snippets.md  PLAN_promptview_mixin_consolidation.md  PLAN_ripple_promotion_cache.md  PLAN_simplification_refactor.md  PLAN_smooth_streaming.md  PLAN_topic_aware_history_compaction.md  PLAN_ui_cleanup.md  PLAN_unified_cache_system.md  PLAN_unified_diff_rendering.md  PLAN_url_scraping.md  PLAN_versioned_webapp_deployment.md  PLAN_webapp_backend_interaction_fixes.md  PLAN_webapp_css_tab_persistence.md  PLAN_webapp_improvements.md  PLAN_webapp_optimization.md  PLAN_webapp_perf_optimizations.md  TODOs  aider_integration_cleanup.md  edit_format_v2.md  edit_format_v3.md  exclude_context_files_from_symbol_map.md  find-in-files.md  handle-binary-files.md  high-impact-refactors.md  remove-aider-integration.md  remove_aider_prompts.md  unified-header-layout.md
scripts/: record_demo.py  sync_prompts.py
specs/: cache_management.md  cache_ui.md  chat_history.md  config.md  context_builder.md  context_manager.md  dialog.md  diff_viewer.md  edit_blocks.md  git_operations.md  history_compaction.md  input_history_navigation.md  jrpc-oo.md  prompt_construction.md  scrolling_behaviour.md  streaming_chat.md  symbol_index.md  tab_cache.md  tab_context.md  tab_files.md  tab_search.md  tab_settings.md  url_handling.md  webapp_build.md
specs-reference/: README.md
specs2/: README.md  TODO.md  build_and_deployment.md  cache_context_viewers.md  cache_tiering.md  chat_interface.md  code_review.md  communication_layer.md  configuration.md  diff_viewer.md  edit_protocol.md  file_picker.md  history_and_compaction.md  image_persistence.md  jrpc_oo_integration.md  llm_context_engine.md  prompt_system.md  repository_operations.md  search_interface.md  settings_interface.md  speech_to_text.md  streaming_chat.md  symbol_index.md  url_handling.md  webapp_shell.md
specs3/: README.md  TODO.md
specs4/: README.md
src/: utils.py
tests/: __init__.py  conftest.py  test_agent_factory.py  test_agent_runner.py  test_base_cache.py  test_base_formatter.py  test_cli.py  test_collab.py  test_collab_restrictions.py  test_config.py  test_config_defaults.py  test_config_manager.py  test_context.py  test_context_builder.py  test_context_manager.py  test_doc_convert.py  test_doc_index.py  test_doc_index_cache.py  test_doc_index_enrichment.py  test_doc_index_formatter.py  test_doc_index_keyword_enricher.py  test_doc_index_markdown_extractor.py  test_doc_index_models.py  test_doc_index_orchestrator.py  test_doc_index_reference_index.py  test_doc_index_svg_extractor.py  test_doc_index_svg_geometry.py  test_edit_parser.py  test_edit_pipeline.py  test_edit_protocol.py  test_extractors.py  test_file_context.py  test_github_handler.py  test_history.py  test_history_browser.js  test_history_compaction.py  test_history_compactor.py  test_history_graduation.py  test_history_store.py  test_llm_history.py  (+43 more)
tests_skills/: __init__.py  conftest.py  test_compaction_skill.py
webapp/: app-shell.js  context-viewer.js  file-picker.js  find-in-files.js  history-browser.js  index.html  package-lock.json  package.json  prompt-view.js  settings-panel.js  vite.config.js  vite.config.js.timestamp-1777612583449-b04ca2e36525b.mjs  vitest.setup.js
(+948 files in other folders)
